# kvtc

./: README.md  RESEARCH_NOTES.md  wsl_proof.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
benchmarks/: benchmark_perplexity.py
cuda/: CMakeLists.txt  integrate_llamacpp.py  kvtc.h  kvtc_kernels.cu  patch_fa_dispatch.py  patch_fa_remap.py  patch_setrows.py  test_kvtc_kernels.cu
notebooks/: kvtc_demo.ipynb
src/: benchmark_gpu.py  pca.py  pipeline.py  test_kvtc.py  triton_kernels.py  vllm_triton.py
